--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 
 #banner {
     background-color: #678d7c;
-    background-image: url('/Images/Website\ Banner\ Background\ Image.png');
+    background-image: url('./Website\ Banner\ Background\ Image.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -119,7 +119,7 @@ html {
 }
 
 #section3 {
-    background-image: url('/Images/Section3\ Background\ Image.png');
+    background-image: url('./Section3\ Background\ Image.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -185,7 +185,7 @@ html {
 
 #section5 {
     background-color: #678d7c;
-    background-image: url('/Images/Section5\ Backgroun\ Image.png');
+    background-image: url('./Section5\ Backgroun\ Image.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -340,7 +340,7 @@ input[type='submit'] {
 
     #banner {
         background-color: #678d7c;
-        background-image: url('/Images/Website\ Banner\ Background\ Image.png');
+        background-image: url('./Website\ Banner\ Background\ Image.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -424,7 +424,7 @@ input[type='submit'] {
     }
 
     #section3 {
-        background-image: url('/Images/Section3\ Background\ Image.png');
+        background-image: url('./Section3\ Background\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -490,7 +490,7 @@ input[type='submit'] {
 
     #section5 {
         background-color: #678d7c;
-        background-image: url('/Images/Section5\ Backgroun\ Image.png');
+        background-image: url('./Section5\ Backgroun\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -646,7 +646,7 @@ input[type='submit'] {
 
     #banner {
         background-color: #678d7c;
-        background-image: url('/Images/Website\ Banner\ Background\ Image.png');
+        background-image: url('./Website\ Banner\ Background\ Image.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -744,7 +744,7 @@ input[type='submit'] {
     }
 
     #section3 {
-        background-image: url('/Images/Section3\ Background\ Image.png');
+        background-image: url('./Section3\ Background\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -810,7 +810,7 @@ input[type='submit'] {
 
     #section5 {
         background-color: #678d7c;
-        background-image: url('/Images/Section5\ Backgroun\ Image.png');
+        background-image: url('./Section5\ Backgroun\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -935,7 +935,7 @@ input[type='submit'] {
 
     #banner {
         background-color: #678d7c;
-        background-image: url('/Images/Website\ Banner\ Background\ Image.png');
+        background-image: url('./Website\ Banner\ Background\ Image.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -1033,7 +1033,7 @@ input[type='submit'] {
     }
 
     #section3 {
-        background-image: url('/Images/Section3\ Background\ Image.png');
+        background-image: url('./Section3\ Background\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1099,7 +1099,7 @@ input[type='submit'] {
 
     #section5 {
         background-color: #678d7c;
-        background-image: url('/Images/Section5\ Backgroun\ Image.png');
+        background-image: url('./Section5\ Backgroun\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1257,7 +1257,7 @@ input[type='submit'] {
 
     #banner {
         background-color: #678d7c;
-        background-image: url('/Images/Website\ Banner\ Background\ Image.png');
+        background-image: url('./Website\ Banner\ Background\ Image.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -1358,7 +1358,7 @@ input[type='submit'] {
     }
 
     #section3 {
-        background-image: url('/Images/Section3\ Background\ Image.png');
+        background-image: url('./Section3\ Background\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1424,7 +1424,7 @@ input[type='submit'] {
 
     #section5 {
         background-color: #678d7c;
-        background-image: url('/Images/Section5\ Backgroun\ Image.png');
+        background-image: url('./Section5\ Backgroun\ Image.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
